--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
     border: solid 1.5px #f6f7fa;
     background-color: #f6f7fa;
 }
+.drag2-text{
+  text-align: center;
+      width: 100%;
+  height: 100%;
+}
+
 .file-upload-btn {
   width: 100%;
   margin: 0;
@@ -450,3 +456,4 @@ input:checked + label > .knob > i:before {
     width: 320px;
     margin: 0 auto;
 }
+
