--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     border: solid 1.5px #f6f7fa;
     background-color: #f6f7fa;
 }
-.drag2-text{
+.drag2 {
   text-align: center;
       width: 100%;
   height: 100%;
@@ -455,5 +455,9 @@ input:checked + label > .knob > i:before {
 .ad-banner {
     width: 320px;
     margin: 0 auto;
+}
+.adpick {
+    width: 320px;
+    height: 320px;
 }
 
